k8s/app-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
   name: app-deployment
   namespace: prod 
   labels:
      app: my-deployment
      auther: Tawfeeq
spec:
  replicas: 2
  selector:
    matchLabels:
      app: my-app
  strategy:
    type: RollingUpdate
      maxUnavailable: 1
      maxSurge: 1
  template:
    metadata:
      labels:
        app: my-app
    spec:
      containers:
        - name: app
          image: tawfeeq421/company-task:11
          ports:
            - name: app-port
              containerPort: 80
          resources:
            requests:
              cpu: 150m
              memory: 120Mi
            limits:
              cpu: 250m
              memory: 240Mi
          livenessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 10
            periodSeconds: 5
          readinessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 10
            periodSeconds: 5
