k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress 
Metadata:
  name: my-ingress
  namespace: prod 
  labels:
    name: mying 
  annotation:
    ngnix.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "true"

spec:
  ingressClassName: nginx 
  tls:
    - hosts:
       - companytask.com
      secretName: task-tls
  rules:
    - host: companytask.com
      paths:
        - path: /
          pathType: Prefix
          backend:
            name: app-service
            port:
              number: 80
